--- a/index.css
+++ b/index.css
@@ -5,19 +5,19 @@
     align-items: center; 
     width: 100%; 
     height: 100vh; 
-    background-color: rgb(0, 61, 0); 
+    
 } 
   
 
   
 .digit { 
-    font-size: 150px; 
-    color: #fff; 
+    font-size: 80px; 
+    color:black; 
 } 
   
 .txt { 
-    font-size: 30px; 
-    color: #fffcd6; 
+    font-size: 20px; 
+    color: black; 
 } 
   
 #buttons { 
