--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     justify-content: center; 
     align-items: center; 
     width: 100%; 
-    height: 100vh; 
+    /* height: 100vh;  */
     
 } 
   
@@ -23,6 +23,14 @@
 #buttons { 
     margin-top: 50px; 
 } 
+
+#score{
+    font-size: 60px; 
+    color: black; 
+}
+#score p{
+    margin: 0;
+}
   
 .btn { 
     width: 100px; 
